k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quak
  labels:
    app.kubernetes.io/name: quak
    app.kubernetes.io/part-of: quak
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
