k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quak
  labels:
    app.kubernetes.io/name: quak
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: quak
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: quak-headless
  labels:
    app.kubernetes.io/name: quak
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: quak
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 3001
      targetPort: http
      protocol: TCP
